# mcp-governance-bridge

./: .dockerignore  README.md  mcp_governance_config.example.json  pyproject.toml  requirements.txt  run.sh
app/: __init__.py  governance_server_manager.py  main.py
core/: governance_engine.py  usage_tracker.py
dashboard/: dashboard_utils.py  streamlit_dashboard.py
database/: atlas_client.py
tests/: conftest.py  requirements-test.txt  run_tests.sh  test_atlas_client.py  test_config_loader.py  test_governance_engine.py  test_main.py  test_usage_tracker.py
utils/: config_loader.py  logger.py
