[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-governance-bridge"
version = "1.0.0"
description = "MCP Governance Bridge"
authors = [
    {name = "Mohammad Daoud Farooqi", email = "mohammaddaoud.farooqi@mongodb.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.6.1",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "pymongo>=4.12.0",
    "motor>=3.3.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.6",
    "httpx>=0.27.2",
    "asyncio>=3.4.3",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/mongodb-partners/mcp-governance-bridge"
Documentation = "https://mongodb-partners.github.io/maap-framework/"
Repository = "https://github.com/mongodb-partners/mcp-governance-bridge.git"
Issues = "https://github.com/mongodb-partners/mcp-governance-bridge/issues"

[project.scripts]
mcp-governance = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "database*", "dashboard*", "utils*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
